gitops/manifests/jellyfin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: internal
  rules:
    - host: jellyfin.loukawai.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.loukawai.fr
      secretName: jellyfin-tls
